public-app/overlays/demo/platform-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform
spec:
  template:
    metadata:
      annotations:
        reloader.stakater.com/search: "true"
    spec:
      containers:
        - name: vc-platform-web      
          volumeMounts:
            - mountPath: "/opt/virtocommerce/platform/wwwroot/cms-content"
              name: cms-content-data
      volumes:
        - name: cms-content-data
          persistentVolumeClaim:
            claimName: cms-content-nfs
