public-app/overlays/demo/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/proxy-body-size: 100M
    #ingress.kubernetes.io/proxy_buffering: "off"
    # ingress.kubernetes.io/proxy_buffer_size: 128k
    # ingress.kubernetes.io/proxy_buffers: 8 256k
    # ingress.kubernetes.io/proxy_busy_buffers_size: 256k
    # ingress.kubernetes.io/fastcgi_buffer_size: 128k
    # ingress.kubernetes.io/fastcgi_buffers: 4 128k
spec:
  rules:
  - host: $(VC_STOREFRONT_SERVICE).$(VC_NAMESPACE).govirto.com
    http:
      paths:
      - backend:
          serviceName: storefront
          servicePort: 80
        path: /
  - host: $(VC_PLATFORM_SERVICE).$(VC_NAMESPACE).govirto.com
    http:
      paths:
      - backend:
          serviceName: platform
          servicePort: 80
        path: /
